Fixed artist on the comic book detail view.

--- a/ComicBookGallery/Views/ComicBooks/Detail.cshtml
+++ b/ComicBookGallery/Views/ComicBooks/Detail.cshtml
@@ -26,8 +26,20 @@
         <h2>Issue #@issueNumber</h2>
         <h5>Description:</h5>
         <div>@Html.Raw(description)</div>
-        <h5>Artists:</h5>
-        <div>@artists</div>
+
+        @if ()
+        {
+            <h5>Artists:</h5>
+            <div>
+                <ul>
+                    @foreach (var artist in artists)
+                {
+                        <li>@artist</li>
+                        <text>* @artist</text>
+                    }
+                </ul>
+            </div>
+        }
     </div>
 </body>
 </html>
